# GridForge

./: .env.example  .gitignore  .trufflehog.yaml  AI_PLAN.md  GETTING_STARTED.md  Makefile  README.md  TOOLS.md  Tiltfile  atlantis.yaml  docker-compose.override.yml  docker-compose.yml  lighthouserc.js  renovate.json  skaffold.yaml
analytics/: README.md
api-management/: README.md
api-testing/: README.md
backstage/: README.md  app-config.yaml  catalog-info.yaml  plugins.yaml  tech-radar.json
chaos/: README.md
ci/: README.md
data-lineage/: README.md
data-quality/: README.md
databases/: README.md
docs/: README.md
events/: README.md  assets.breaker.tripped.avsc  assets.transformer.alarm.avsc  assets.transformer.maintenance.predicted.avsc  crm.customer.complaint.opened.avsc  dispatch.load.actual.avsc  dispatch.load.forecasted.avsc  dr.event.dispatched.avsc  dr.event.settled.avsc  emobility.charger.session.ended.avsc  emobility.charger.session.started.avsc  emobility.v2g.scheduled.avsc  generation.pv.forecasted.avsc  generation.wind.forecasted.avsc  metering.reading.captured.avsc  metering.theft.suspected.avsc  reliability.outage.confirmed.avsc  reliability.outage.predicted.avsc  reliability.restoration.completed.avsc  scada.anomaly.detected.avsc  scada.cyberphysical.alert.avsc  tariff.rate.changed.avsc  trading.battery.dispatch.avsc  trading.market.cleared.avsc
feature-flags/: README.md
gitops/: README.md
src/grid-ops/scada-gateway/: .env.example  CMakeLists.txt  Dockerfile  Makefile  README.md
src/grid-ops/scada-gateway/src/: main.cpp
(+1419 files in other folders)
